# projectdavid-platform

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  COMMERCIAL.md  PINNED_IMAGES.md  README.md  docker-compose.gpu.yml  docker-compose.ollama.yml  docker-compose.training.yml  docker-compose.vllm.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start_orchestration.py
.github/workflows/: ci.yml  test_tag_release.yml
docker/nginx/: nginx.conf
docs/: flag-matrix.md  sovereign-cluster.md
projectdavid_platform/: __init__.py  docker-compose.gpu.yml  docker-compose.ollama.yml  docker-compose.vllm.yml  docker-compose.yml  license_validator.py  start_orchestration.py  tunnel.py
projectdavid_platform/docker/nginx/: nginx.conf
scripts/: generate_keypair.py  generate_license.py  get_image_info.ps1  version_control.py
tests/: conftest.py  test_clients.py  test_configure.py  test_env_generation.py  test_path_resolution.py  test_prompts.py  test_validation.py
