[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectdavid-platform"
version = "1.15.0"
description = "Deployment orchestrator for the Project David / Entities platform"
readme = "README.md"
authors = [
  { name = "Francis Neequaye Armah", email = "francis.neequaye@projectdavid.co.uk" }
]
license = { text = "PolyForm Noncommercial 1.0.0" }
requires-python = ">=3.9"
keywords = ["Entities", "ProjectDavid", "Orchestration", "Docker", "Deployment", "LLM"]

dependencies = [
  "PyYAML>=5.4",
  "python-dotenv>=1.0",
  "typer>=0.9.0",
]

[project.scripts]
pdavid = "projectdavid_platform.start_orchestration:entry_point"

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "isort>=5.12",
  "ruff>=0.4.0",
  "pytest>=7.2",
  "build",
  "twine",
]

# -------------------------------------------------------------------------
# Bundle all runtime assets so they are available after pip install without
# any repository clone. _ensure_config_files in start_orchestration.py
# copies these to the user's CWD on first run.
# -------------------------------------------------------------------------
[tool.setuptools.package-data]
"projectdavid_platform" = [
  "docker-compose.yml",
  "docker-compose.gpu.yml",
  ".env.example",
  "docker/nginx/nginx.conf",
  "docker/otel/otel-config.yaml",
  "docker/searxng/settings.yml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["projectdavid_platform*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--ignore=tests/integration"

[tool.semantic_release]
version_source = "tag"
upload_to_pypi = false