[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectdavid-platform"
version = "1.41.0"


description = "Deployment orchestrator for the Project David / Entities platform"
readme = "README.md"
authors = [
  { name = "Francis Neequaye Armah", email = "francis.neequaye@projectdavid.co.uk" }
]
license = { text = "PolyForm Noncommercial License 1.0.0" }
requires-python = ">=3.9"
keywords = ["Entities", "ProjectDavid", "Orchestration", "Docker", "Deployment", "LLM"]

# ── Infrastructure Grade Capping ──────────────────────────────────────────
dependencies = [
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "typer>=0.9.0,<1.0.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[project.scripts]
pdavid = "projectdavid_platform.start_orchestration:entry_point"

[project.optional-dependencies]
dev = [
  "black==24.1.1",        # Aligned with SDK Gold Standard
  "isort==5.13.2",        # Aligned with SDK Gold Standard
  "ruff>=0.4.0",
  "pytest>=7.2",
  "pytest-cov",
  "mypy>=1.0",
  "bandit",
  "safety",
  "build",
  "twine",
  "cryptography>=42.0.0",         # Type stubs for YAML

]

[tool.setuptools.package-data]
"projectdavid_platform" = [
  "py.typed",
  "docker-compose.yml",
  "docker-compose.ollama.yml",
  "docker/nginx/nginx.conf",
  "docker/otel/otel-config.yaml",
  "docker/searxng/settings.yml",
  ".env.example",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["projectdavid_platform*"]

# ── Unified Formatting (SDK Parity) ───────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--ignore=tests/integration"

[project.urls]
Homepage = "https://github.com/project-david-ai/projectdavid-platform"
Documentation = "https://docs.projectdavid.co.uk/docs/platform-overview"
Changelog = "https://github.com/project-david-ai/projectdavid-platform/blob/main/CHANGELOG.md"
